--- a/submit-form.html
+++ b/submit-form.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>submit Form</title>
+    <title>Submit Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="js/style.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> <!-- Include jQuery -->
     <link rel="stylesheet" href="css/form.css">
     <!-- roboto font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,79 +21,72 @@
 </head>
 
 <body>
-    <div class="container-fluid py-5">
-        <div class="container  pt-5 py-5 mb-2 text-white ">
-            <div class="text-center mt-2 pt-2">
-                <img src="img/download.png" style="height: 100px; " class=" rounded-circle logo " alt="">
+    <div class="container-fluid ">
+        <div class="container pt-2   py-5  text-white">
+            <div class="text-center">
+                <img src="img/download.png" style="height: 100px;" class="rounded-circle logo" alt="">
             </div>
-            <h1 class="text-center"> On-Site Inquiries</h1>
-            <form action="">
-                <div class="row">
-                    <div class="col-12 ">
-                        <label for="Name" class="fw-bold ps-1">Name <span
+            <h1 class="text-center">On-Site Inquiries</h1>
+            <form id="inquiryForm">
+                <div class="row mx-5">
+                    <div class="col-12">
+                        <label for="name" class="fw-bold ps-1" style="font-size: 20px;">Name <span
                                 style="color: red; font-weight: bold;">*</span></label>
                         <br>
-                        <input type="Name" class="w-100 rounded mt-2 px-3" style="height: 50px;" required>
+                        <input type="text" id="name" class="w-100 rounded mt-1 px-3" style="height: 50px;" required>
                     </div>
-                    <div class="col-12 mt-5 pt-4">
-                        <label for="Name" class="fw-bold " style="font-size: 30px;">Where are You?<span
+                    <div class="col-12 mt-3 pt-4">
+                        <label for="location" class="fw-bold" style="font-size: 20px;">Where are You?<span
                                 style="color: red; font-weight: bold;">*</span></label>
                         <br>
-                        <input type="Name" class="w-100 rounded mt-2 px-3" style="height: 50px;" required>
+                        <input type="text" id="location" class="w-100 rounded mt-2 px-3" style="height: 50px;" required>
                         <span class="fw-normal ps-1">Street Address</span>
                     </div>
                     <div class="col-12 mt-3">
-                        <input type="Name" class="w-100 rounded mt-2 px-3" style="height: 50px;" required>
+                        <input type="text" id="addressLine2" class="w-100 rounded mt-2 px-3" style="height: 50px;"
+                            required>
                         <span class="fw-normal ps-1">Address Line 2</span>
                     </div>
                     <div class="col-6 mt-2">
-                        <input type="Name" class="w-100 rounded mt-2  px-3" style="height: 50px;" required>
+                        <input type="text" id="city" class="w-100 rounded mt-2 px-3" style="height: 50px;" required>
                         <span class="fw-normal ps-1">City</span>
                     </div>
                     <div class="col-6 mt-2">
-                        <input type="Name" class="w-100 rounded mt-2 px-3" style="height: 50px;" required>
+                        <input type="text" id="state" class="w-100 rounded mt-2 px-3" style="height: 50px;" required>
                         <span class="fw-normal ps-1">State/Region/province</span>
                     </div>
                     <div class="col-6 mt-2">
-                        <input type="code" class="w-100 rounded mt-2 px-3" min="6" max="8" style="height: 50px;"
-                            required>
+                        <input type="text" id="postalCode" class="w-100 rounded mt-2 px-3" min="6" max="8"
+                            style="height: 50px;" required>
                         <span class="fw-normal ps-1">Postal/Zip Code</span>
                     </div>
                     <div class="col-6 mt-2">
-                        <select id="country" class="w-100 rounded mt-2 select " style="height: 50px;" required>
-                            <option value="" disabled selected>-Select-</option>
+                        <select id="country" class="form-select mt-2 select" style="height: 50px;" required>
+                            <option value="" selected>-Select-</option>
                             <option value="india">India</option>
                             <option value="usa">United States</option>
                             <option value="uk">United Kingdom</option>
                             <option value="canada">Canada</option>
                             <option value="australia">Australia</option>
-                            <option value="Russia">Russia</option>
+                            <option value="russia">Russia</option>
                         </select>
                     </div>
-                    <div class="col-12 mt-4 pt-4">
-                        <h1>What's the progress status? <span style="color: red; font-weight: bold;">*</span></h1>
+
+                    <div class="col-12 mt-3 pt-3">
+                        <h1 style="font-size: 20px;">What's the progress status? <span
+                                style="color: red; font-weight: bold;">*</span></h1>
                     </div>
-
-                    <div class="col-12 mt-4">
-                        <input type="range" class="w-100" style="height: 50px;" id="slider-digs" min="0" max="100"
-                            value="0" oninput="updateProgress('progress-digs', this.value)" />
-
+                    <div class="col-12 ">
+                        <input class="range bg-light" type="range" value="0" min="0" max="100" />
                     </div>
-
                 </div>
-                <div class="text-center mt-3">
-                    <button class="btnn">Submit</button>
+                <div class="text-center mt-3 ">
+                    <button type="submit" class="btnn">Submit</button>
                 </div>
             </form>
         </div>
     </div>
-    <script>
-        function updateProgress(barId, value) {
-            const progressBar = document.getElementById(barId);
-            progressBar.style.width = value + '%';
-        }
-    </script>
-
+    <script src="js/style.js"></script>
 </body>
 
 </html>
