--- a/submit-form.html
+++ b/submit-form.html
@@ -28,7 +28,7 @@
             </div>
             <h1 class="text-center">On-Site Inquiries</h1>
             <form id="inquiryForm">
-                <div class="row mx-lg-5">
+                <div class="row">
                     <div class="col-lg-12 col-sm-12">
                         <label for="name" class="fw-bold ps-1" style="font-size: 20px;">Name <span
                                 style="color: red; font-weight: bold;">*</span></label>
