--- a/submit-form.html
+++ b/submit-form.html
@@ -15,8 +15,7 @@
     <!-- roboto font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    <link  href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -28,7 +27,7 @@
             </div>
             <h1 class="text-center">On-Site Inquiries</h1>
             <form id="inquiryForm">
-                <div class="row">
+                <div class="row mx-lg-5 px-lg-5">
                     <div class="col-lg-12 col-sm-12">
                         <label for="name" class="fw-bold ps-1" style="font-size: 20px;">Name <span
                                 style="color: red; font-weight: bold;">*</span></label>
