--- a/submit-form.html
+++ b/submit-form.html
@@ -15,7 +15,8 @@
     <!-- roboto font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link  href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -65,7 +66,7 @@
                             <option value="india">India</option>
                             <option value="usa">United States</option>
                             <option value="uk">United Kingdom</option>
-                            <option value="canada">Canad</option>
+                            <option value="canada">Canada</option>
                             <option value="australia">Australia</option>
                             <option value="russia">Russia</option>
                         </select>
