--- a/submit-form.html
+++ b/submit-form.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <!-- Include jQuery -->
-    <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- roboto font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -88,7 +88,7 @@
             </form>
         </div>
     </div>
-    <script src="js/style.js"></script>
+    <script src="js/form.js"></script>
 </body>
 
 </html>
